--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.11.0",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
+    "generate": "^0.14.0",
     "graphql": "^16.8.1",
     "next": "^12.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
