--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@apollo/client": "^3.9.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -19,7 +20,9 @@
     "graphql": "^16.8.1",
     "next": "^12.1.0",
     "react": "^17.0.2",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^17.0.2",
+    "react-youtube": "^10.1.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
